# MRCB

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Testdata/continuous processing/nav/: brdc2990.24p  brdc3000.24p
Testdata/day-by-day processing/: BRDC00IGS_R_20242980000_01D_MN.24n
include/: MRCB.h  MRCB_SolBody.h  MRCB_SolHead.h
result/: README.txt
script/: RCB_Continues.m  RCB_day_by_day.m
src/: MRCB_ComFun.cpp  MRCB_DataPre.cpp  MRCB_DataProcess.cpp  MRCB_Ephemeris.cpp  MRCB_Inpfile.cpp  MRCB_Options.cpp  MRCB_Pntpos.cpp  MRCB_RcbProcess.cpp  MRCB_ReadRinex.cpp  MRCB_SolBody.cpp  MRCB_SolHead.cpp  main.cpp
